--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
 	"files.associations": {
 		"get_next_line.h": "c",
 		"MAIN.C": "cpp",
-		"stdio.h": "c"
+		"stdio.h": "c",
+		"__bit_reference": "c",
+		"algorithm": "c",
+		"bitset": "c",
+		"chrono": "c",
+		"unordered_map": "c"
 	}
 }
